[package]
name = "http-reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.18.0"
features = ["full"]

[dependencies.hyper]
version = "0.14.17"
features = ["full"]

[dependencies.hyper-tls]
version = "0.5.0"

[dependencies.anyhow]
version = "1.0.55"

[dependencies.log]
version = "0.4.14"

[dependencies.env_logger]
version = "0.9.0"

[dependencies.cfg-if]
version = "1.0.0"

[dependencies.once_cell]
version = "1.9.0"

[dependencies.serde]
version = "1.0.136"
features = ["serde_derive"]

[dependencies.serde_yaml]
version = "0.8.23"

[dependencies.route-recognizer]
version = "0.3.1"

[dependencies.tower]
version = "0.4.12"
features = ["full"]

[dependencies.tower-http]
version = "0.2.3"
features = ["full"]

[features]
tls = []